# postgres-language-server

./: .env  .gitattributes  .gitignore  .gitmodules  .npmrc  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CLAUDE.md  Cargo.lock.main  Cargo.toml  Dockerfile  NON_POSTGRES_KEYWORDS.md  PLAN.md  PLAN_KEYWORD_COMPLETION.md  PLAN_ONEOF_KEYWORDS.md  README.md  STACKED_PR_PLAN.md  STATE.md  UNAMBIGUOUS_KEYWORDS.md  biome.jsonc  bunfig.toml  cliff.toml  docker-compose.yml  flake.nix  index.html  justfile  mkdocs.yml  package.json  postgres-language-server.jsonc  postgrestools.jsonc  pyproject.toml  rust-toolchain.toml  sample.sql  sample_hover.sql  sitemap.xml  test.sql  todo.txt  uv.toml  versions.json
0.18.0/codegen/: Cargo.toml
0.18.0/codegen/src/: main.rs  version.rs
crates/pgls_analyser/: CONTRIBUTING.md  Cargo.toml
crates/pgls_analyser/src/: lib.rs  lint.rs  linter_context.rs  linter_options.rs  linter_registry.rs  linter_rule.rs  options.rs  registry.rs
crates/pgls_analyser/src/lint/: safety.rs
crates/pgls_analyser/tests/: rules_tests.rs
crates/pgls_completions/: Cargo.toml  README.md
crates/pgls_completions/benches/: sanitization.rs
crates/pgls_completions/src/: builder.rs  complete.rs  item.rs  relevance.rs  sanitization.rs  test_helper.rs
crates/pgls_configuration/: Cargo.toml
crates/pgls_configuration/src/: database.rs  diagnostics.rs  files.rs  format.rs  lib.rs  migrations.rs  plpgsql_check.rs  typecheck.rs  vcs.rs
crates/pgls_configuration_macros/: Cargo.toml
crates/pgls_configuration_macros/src/: lib.rs  merge_derive.rs
crates/pgls_diagnostics/: Cargo.toml
crates/pgls_diagnostics/src/: adapters.rs  advice.rs  context.rs  diagnostic.rs  display.rs  display_github.rs  error.rs  lib.rs  location.rs  serde.rs  suggestion.rs
crates/pgls_diagnostics_categories/: Cargo.toml  build.rs
crates/pgls_diagnostics_categories/src/: categories.rs  lib.rs
crates/pgls_env/: Cargo.toml
crates/pgls_env/src/: lib.rs
crates/pgls_hover/: Cargo.toml
crates/pgls_hover/src/: contextual_priority.rs  hovered_node.rs  lib.rs  to_markdown.rs
crates/pgls_hover/tests/: hover_integration_tests.rs
crates/pgls_lexer/: Cargo.toml
crates/pgls_lexer/src/: lexed.rs  lexer.rs  lib.rs
crates/pgls_lexer_codegen/: Cargo.toml
crates/pgls_lexer_codegen/src/: keywords.rs  syntax_kind.rs
crates/pgls_lsp/: Cargo.toml
crates/pgls_lsp/src/: capabilities.rs  diagnostics.rs  handlers.rs  server.rs  session.rs  utils.rs
crates/pgls_lsp/tests/: server.rs
crates/pgls_matcher/: Cargo.toml
crates/pgls_matcher/src/: lib.rs  pattern.rs
crates/pgls_pglinter/: Cargo.toml  build.rs
crates/pgls_pglinter/src/: cache.rs  diagnostics.rs  lib.rs  registry.rs  rule.rs  sarif.rs
crates/pgls_pglinter/tests/: diagnostics.rs
crates/pgls_plpgsql_check/: Cargo.toml
crates/pgls_plpgsql_check/src/: diagnostics.rs  lib.rs
crates/pgls_query/: Cargo.toml  build.rs
crates/pgls_query/examples/: api_example.rs
crates/pgls_query/src/: deparse.rs  fingerprint.rs  iter_mut.rs  iter_ref.rs  lib.rs  node_enum.rs  node_mut.rs  node_ref.rs  node_structs.rs  normalize.rs  parse.rs  plpgsql.rs  protobuf.rs  scan.rs  split.rs
crates/pgls_query_ext/: Cargo.toml
crates/pgls_query_ext/src/: diagnostics.rs  utils.rs
crates/pgls_query_macros/: Cargo.toml  build.rs
crates/pgls_query_macros/src/: iter_mut.rs  node_ref.rs  proto_analyser.rs
crates/pgls_schema_cache/: Cargo.toml
crates/pgls_schema_cache/src/: columns.rs  extensions.rs  functions.rs  indexes.rs  lib.rs  policies.rs  roles.rs  schema_cache.rs  schemas.rs  sequences.rs  tables.rs  triggers.rs  types.rs  versions.rs
crates/pgls_splinter/: Cargo.toml  TODO.md  build.rs
crates/pgls_splinter/.sqlx/: query-425fc6118e76cea42cf256b3b0f11046dc8b77d84c94314a0ed0716e5803df69.json
crates/pgls_splinter/src/: convert.rs  diagnostics.rs  lib.rs  query.rs  registry.rs  rule.rs
crates/pgls_splinter/tests/: diagnostics.rs
crates/pgls_statement_splitter/: Cargo.toml
crates/pgls_statement_splitter/benches/: splitter.rs
crates/pgls_statement_splitter/src/: diagnostics.rs  lib.rs  splitter.rs
crates/pgls_statement_splitter/tests/: statement_splitter_tests.rs
crates/pgls_suppressions/: Cargo.toml
crates/pgls_suppressions/src/: lib.rs  line_index.rs  parser.rs  suppression.rs
crates/pgls_test_utils/: Cargo.toml
crates/pgls_test_utils/src/: lib.rs
crates/pgls_test_utils/testdb_migrations/: 0001_setup-roles.sql
crates/pgls_tokenizer/: Cargo.toml
crates/pgls_tokenizer/src/: lib.rs
crates/pgls_treesitter/: Cargo.toml
crates/pgls_treesitter/src/: helper.rs  lib.rs
crates/pgls_treesitter_grammar/: .editorconfig  .gitattributes  Cargo.toml  GRAMMAR_GUIDELINES.md  NOTICE  build.rs  grammar.js  package-lock.json  tree-sitter.json
crates/pgls_treesitter_grammar/benches/: lookahead_iter.rs  parsing.rs  parsing_with_existing_tree.rs
crates/pgls_treesitter_grammar/src/: grammar.json  lib.rs  node-types.json  scanner.c
crates/pgls_treesitter_grammar/tests/: grammar_tests.rs  partial_no_errors.rs
crates/pgls_type_resolver/: Cargo.toml
crates/pgls_type_resolver/src/: functions.rs  types.rs  util.rs
crates/pgls_typecheck/: Cargo.toml
crates/pgls_typecheck/benches/: error_rewriting.rs
crates/pgls_typecheck/src/: diagnostics.rs  lib.rs  typed_identifier.rs
crates/pgls_typecheck/tests/: diagnostics.rs
xtask/: Cargo.toml
xtask/agentic/: Cargo.toml  ast_nodes.txt
xtask/agentic/src/: autonomous_pretty_print.rs  claude_session.rs  lib.rs  main.rs  pretty_print.rs
xtask/codegen/: Cargo.toml
xtask/codegen/src/: generate_analyser.rs  generate_bindings.rs  generate_configuration.rs  generate_crate.rs  generate_new_analyser_rule.rs  generate_pglinter.rs  generate_schema_types.rs  generate_splinter.rs  generate_wasm_schema_types.rs  lib.rs  main.rs
xtask/download_regression_tests/: Cargo.toml
xtask/download_regression_tests/src/: lib.rs  main.rs
xtask/rules_check/: Cargo.toml
xtask/rules_check/src/: lib.rs
xtask/src/: agentic.rs  flags.rs  install.rs  leak_check.rs  lib.rs  main.rs
(+37202 files in other folders)
