[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pgls_completions"
repository.workspace = true
version              = "0.0.0"


[dependencies]
async-std = "1.12.0"

pgls_schema_cache.workspace = true
pgls_text_size.workspace    = true
pgls_treesitter.workspace   = true

fuzzy-matcher                     = "0.3.7"
pgls_treesitter_grammar.workspace = true
schemars                          = { workspace = true, optional = true }
serde                             = { workspace = true, features = ["derive"] }
serde_json                        = { workspace = true }
tracing                           = { workspace = true }
tree-sitter.workspace             = true

sqlx.workspace = true

tokio = { version = "1.41.1", features = ["full"] }

[dev-dependencies]
criterion.workspace       = true
pgls_test_utils.workspace = true

[lib]
doctest = false

[features]
schema = ["dep:schemars"]

[[bench]]
harness = false
name    = "sanitization"
