[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pgls_completions"
repository.workspace = true
version              = "0.0.0"


[dependencies]
pgls_schema_cache = { workspace = true, features = ["serde"] }
pgls_text_size.workspace    = true
pgls_treesitter.workspace   = true

fuzzy-matcher                     = "0.3.7"
pgls_treesitter_grammar.workspace = true
schemars                          = { workspace = true, optional = true }
serde                             = { workspace = true, features = ["derive"] }
serde_json                        = { workspace = true }
tracing                           = { workspace = true }
tree-sitter.workspace             = true

[dev-dependencies]
criterion.workspace       = true
insta.workspace           = true
pgls_test_utils.workspace = true
regex                     = "1.12.2"
unindent                  = "0.2.4"


[lib]
doctest = false

[features]
schema = ["dep:schemars"]

[[bench]]
harness = false
name    = "sanitization"
