[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pgls_hover"
repository.workspace = true
version              = "0.0.0"


[dependencies]
humansize                         = { version = "2.1.3" }
pgls_query.workspace              = true
pgls_schema_cache.workspace       = true
pgls_text_size.workspace          = true
pgls_treesitter.workspace         = true
pgls_treesitter_grammar.workspace = true
schemars                          = { workspace = true, optional = true }
serde                             = { workspace = true, features = ["derive"] }
serde_json                        = { workspace = true }
sqlx.workspace                    = true
tokio                             = { version = "1.41.1", features = ["full"] }
tracing                           = { workspace = true }
tree-sitter.workspace             = true

[dev-dependencies]
insta                     = { version = "1.42.1" }
pgls_test_utils.workspace = true

[lib]
doctest = false

[features]
schema = ["dep:schemars"]
