[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pgls_lsp"
repository.workspace = true
version              = "0.0.0"


[dependencies]
anyhow                   = { workspace = true }
biome_deserialize        = { workspace = true }
futures                  = "0.3.31"
pgls_analyse             = { workspace = true }
pgls_completions         = { workspace = true }
pgls_configuration       = { workspace = true }
pgls_console             = { workspace = true }
pgls_diagnostics         = { workspace = true }
pgls_fs                  = { workspace = true }
pgls_text_edit           = { workspace = true }
pgls_text_size.workspace = true
pgls_workspace           = { workspace = true }
rustc-hash               = { workspace = true }
serde                    = { workspace = true, features = ["derive"] }
serde_json               = { workspace = true }
strum                    = { workspace = true }
tokio                    = { workspace = true, features = ["rt", "io-std"] }
tower-lsp                = { version = "0.20.0" }
tracing                  = { workspace = true, features = ["attributes"] }

[dev-dependencies]
pgls_test_utils = { workspace = true }
sqlx            = { workspace = true }
test-log        = { workspace = true }
tokio           = { workspace = true, features = ["macros"] }
tower           = { version = "0.4.13", features = ["timeout"] }

[lib]
doctest = false
