[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pgls_query"
repository.workspace = true
version              = "0.0.0"

[dependencies]
prost     = { workspace = true }
thiserror = { workspace = true }

pgls_query_macros = { workspace = true }


[features]
default = []

[build-dependencies]
bindgen     = "0.72.0"
cc          = "1.0.83"
clippy      = { version = "0.0.302", optional = true }
fs_extra    = "1.2.0"
glob        = "0.3.1"
prost-build = "0.13.5"
which       = "6.0.0"

[dev-dependencies]
easy-parallel = "3.2.0"
