[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pgls_query_ext"
repository.workspace = true
version              = "0.0.0"


[dependencies]
pgls_diagnostics.workspace = true
pgls_query.workspace       = true
pgls_text_size.workspace   = true

[lib]
doctest = false
