[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pgls_query_macros"
repository.workspace = true
version              = "0.0.0"

[dependencies]
convert_case          = { workspace = true }
proc-macro2.workspace = true
prost-reflect         = { workspace = true }
protox                = { workspace = true }
quote.workspace       = true

[lib]
proc-macro = true

[build-dependencies]
ureq = "2.9"
