[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pgls_schema_cache"
repository.workspace = true
version              = "0.0.0"

[features]
default = ["db"]
# Enable serde serialization/deserialization for all types (needed for WASM)
serde = []
# Enable database connectivity (sqlx, async-std, tokio, futures-util)
# Disable this feature for WASM builds
db = ["dep:sqlx", "dep:async-std", "dep:futures-util", "dep:tokio"]

[dependencies]
anyhow.workspace           = true
async-std                  = { version = "1.12.0", optional = true }
futures-util               = { version = "0.3.31", optional = true }
pgls_console.workspace     = true
pgls_diagnostics.workspace = true
serde                      = { workspace = true, features = ["derive"] }
serde_json.workspace       = true
sqlx                       = { workspace = true, optional = true }
strum                      = { workspace = true }
tokio                      = { workspace = true, optional = true }

[dev-dependencies]
pgls_test_utils.workspace = true

[lib]
doctest = false
