[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pgls_splinter"
repository.workspace = true
version              = "0.0.0"

[dependencies]
pgls_analyse.workspace      = true
pgls_diagnostics.workspace  = true
pgls_schema_cache.workspace = true
serde.workspace             = true
serde_json.workspace        = true
sqlx.workspace              = true

[build-dependencies]
ureq = "2.10"

[dev-dependencies]
insta.workspace           = true
pgls_console.workspace    = true
pgls_test_utils.workspace = true

[lib]
doctest = false
