[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pgls_splinter"
repository.workspace = true
version              = "0.0.0"

[dependencies]
pgls_analyse.workspace       = true
pgls_configuration.workspace = true
pgls_diagnostics.workspace   = true
pgls_matcher.workspace       = true
pgls_schema_cache            = { workspace = true, features = ["db"] }
serde.workspace              = true
serde_json.workspace         = true
sqlx.workspace               = true

[dev-dependencies]
biome_deserialize.workspace = true
insta.workspace             = true
pgls_console.workspace      = true
pgls_test_utils.workspace   = true

[build-dependencies]
serde_json = "1"
ureq       = { version = "2.9", features = ["json"] }

[lib]
doctest = false
