[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pgls_treesitter"
repository.workspace = true
version              = "0.0.0"

[lib]
doctest = false

[dependencies]
clap                              = { version = "4.5.23", features = ["derive"] }
pgls_schema_cache.workspace       = true
pgls_text_size.workspace          = true
pgls_treesitter_grammar.workspace = true
tree-sitter.workspace             = true

[dev-dependencies]
pgls_test_utils.workspace = true
