[package]
authors.workspace    = true
categories.workspace = true
description          = "A grammar specifically designed for use with the Postgres Language Server by Supabase-Community. It is tailored to provide autocompletions and other LSP features."
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pgls_treesitter_grammar"
repository.workspace = true
version              = "0.0.0"

build   = "build.rs"
include = ["grammar.js", "queries/*", "src/*", "tree-sitter.json", "LICENSE", "NOTICE"]

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.5"
