[package]
authors.workspace    = true
categories.workspace = true
description          = "A grammar specifically designed for use with the Postgres Language Server by Supabase-Community. It is tailored to provide autocompletions and other LSP features."
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "pgls_treesitter_grammar"
repository.workspace = true
version              = "0.0.0"

build   = "build.rs"
include = ["grammar.js", "queries/*", "src/*", "tree-sitter.json", "LICENSE", "NOTICE"]

[dependencies]
tree-sitter.workspace = true
tree-sitter-language  = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
criterion.workspace       = true
insta                     = { version = "1.42.1" }
pgls_lexer.workspace      = true
pgls_test_utils.workspace = true

[[bench]]
harness = false
name    = "lookahead_iter"

[[bench]]
harness = false
name    = "parsing"

[[bench]]
harness = false
name    = "parsing_with_existing_tree"
